fix: Compatible with JDK 1.8.